<resources>
    <string name="app_name">Forget Me Not</string>
    <string name="forget_me_not">Forget Me Not</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="choose_image">Choose image</string>
    <string name="upload_image">Upload image</string>
    <string name="close">Close</string>
    <string name="description">Keep your memories with you</string>
    <string name="open">Open</string>
</resources>